--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "part-3",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Emran0335/helsinki-mern.git"
+    "start": "nodemon backend/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Emran Hossain",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Emran0335/helsinki-mern/issues"
+  "dependencies": {
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.2"
   },
-  "homepage": "https://github.com/Emran0335/helsinki-mern#readme"
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "description": ""
 }
