--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node backend/index.js",
-    "dev": "cross-env NODE_ENV=development nodemon backend/index.js",
+    "dev": "cross-env NODE_ENV=production node backend/index.js",
+    "build": "backend",
+    "start": "cross-env NODE_ENV=development nodemon backend/index.js",
     "test": "jest --verbose"
   },
   "keywords": [],
